syntax = "proto3";

package bookmarkspb;

service BookmarksService {
    rpc Add (AddRequest) returns (AddResponse) {
    }
    rpc LastAdded (LastAddedRequest) returns (LastAddedResponse) {
    }
    rpc All (LastAddedRequest) returns (stream LastAddedResponse) {
    }
    rpc GetAll (AllRequest) returns (AllResponse) {
    }
}

enum Status {
    None = 0;
    WaitForEmailVerify = 1;
    Active = 2;
    Suspend = 4;
    Deleted = 8;
}


enum Role {
    Guest = 0;
    Member = 1;
    VIP = 2;
}

message AddRequest {
    string URL = 1;
    string Title = 2;
    Status Status = 3;
}

message AddResponse {
}

message LastAddedRequest {
}

message LastAddedResponse {
    string ID = 1;
    string URL = 2;
    string Title = 3;
    Status Status = 4;
    int64 lastTimes = 5;
}
message AllRequest {
}
message AllResponse {
    int64 Total = 1;
    repeated LastAddedResponse Data = 2;
}
